--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>Smash Data Visualization for COMPSCI 590V</title>
-		<link rel='icon' href="favicon.png" type='image/png'>
+		<link rel="icon" href="favicon.png" type="image/png">
 		<script src="https://d3js.org/d3.v5.js"></script>
 	</head>
 	<body>
