Begin work on client side

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,24 @@
 		<script src="https://d3js.org/d3.v5.js"></script>
 	</head>
 	<body>
+		<div id="wrapper">
+			<div id="title">
+				<h1>Smash Data Visualization</h1>
+			</div>
+			<div id="navigation">
+				<ul>
+					<li>
+						<a href="#" id="nav-matchups">Matchup Data</a>
+					</li>
+					<li>Other</li>
+					<li>Other</li>
+					<li>Other</li>
+				</ul>
+			</div>
+			<div id="options">
+			</div>
+			<div id="visualization"></div>
+		</div>
  		<script src="script.js"></script>
 	</body>
 </html>
