Visual changes to matchup data

--- a/client/index.html
+++ b/client/index.html
@@ -18,9 +18,15 @@
 					<li>
 						<a href="#" id="nav-matchups">Matchup Data</a>
 					</li>
-					<li>Other</li>
-					<li>Other</li>
-					<li>Other</li>
+					<li>
+						<a href="#" id="nav-players">Player Data</a>
+					</li>
+					<li>
+						<a href="#" id="nav-games">Game Data</a>
+					</li>
+					<li>
+						<a href="#" id="nav-head2head">Head2Head</a>
+					</li>
 				</ul>
 			</div>
 			<div id="options">
