--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,10 @@
 		<title>Smash Data Visualization for COMPSCI 590V</title>
 		<link rel="icon" href="favicon.png" type="image/png">
 		<script src="https://d3js.org/d3.v5.js"></script>
+ 		<script defer src="scripts/matchups.js"></script>
+ 		<script defer src="scripts/players.js"></script>
+ 		<script defer src="scripts/games.js"></script>
+ 		<script defer src="scripts/head2head.js"></script>
 	</head>
 	<body>
 		<div id="wrapper">
@@ -33,6 +37,5 @@
 			</div>
 			<div id="visualization"></div>
 		</div>
- 		<script src="script.js"></script>
 	</body>
 </html>
