finished game data and added twitter bootstrap

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,9 @@
  		<script defer src="scripts/matchups.js"></script>
  		<script defer src="scripts/players.js"></script>
  		<script defer src="scripts/games.js"></script>
- 		<script defer src="scripts/head2head.js"></script>
+		<script defer src="scripts/head2head.js"></script>
+		<link rel=stylesheet type=text/css href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css' media='all'>
+
 	</head>
 	<body>
 		<div id="wrapper">
