--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,15 @@
 			<div id="title">
 				<h1>Smash Data Visualization</h1>
 			</div>
+			<div id="header-navigation" class="header">
+				<h3>Navigation</h3>
+			</div>
+			<div id="header-options" class="header">
+				<h3>Options</h3>
+			</div>
+			<div id="header-visualization" class="header">
+				<h3>Visualization</h3>
+			</div>
 			<div id="navigation">
 				<ul>
 					<li>
@@ -33,8 +42,7 @@
 					</li>
 				</ul>
 			</div>
-			<div id="options">
-			</div>
+			<div id="options"></div>
 			<div id="visualization"></div>
 		</div>
 	</body>
